# Okapi

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.json
src/: cors.rs  main.rs
src/content/: delete_content.rs  edit_content.rs  get_content.rs  manager.rs  mod.rs  new_content.rs
src/content/multipart/: mod.rs
src/invite/: delete_invite.rs  get_invite.rs  manager.rs  mod.rs  new_invite.rs
src/metadata/: get_metadata.rs  manager.rs  mod.rs
src/user/: delete_user.rs  get_users.rs  login.rs  logout.rs  manager.rs  mod.rs  new_user.rs  set_perms.rs  userutil.rs
src/util/: ferr.rs  gen_id.rs  mod.rs  permissions.rs  validate.rs
