[package]
name = "okapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.11", features = ["derive"] }
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust", rev = "5bf2c24203ad422233cf35b7b7bfad9f7e811814" }

# databases
rusqlite = "0.26.0"

# rocket
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# Auth
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "7"

# media length
mp3-duration = "0.1.10"
mp4 = "0.11.0"

# play media
rocket_seek_stream = {git="https://github.com/StappsWorld/rocket_seek_stream"}

# metadata fetching
reqwest = { version = "0.11", features = ["json", "blocking"] }